--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -86,60 +86,62 @@
     <div class="main-main">
       <div id='messages' class="message-contents">
         <% @messages.reverse_each do |message| %>
-          <% if message.user.id == current_user.id%>
-            <div class="message-content-right">
-              <div class="message-icon">
-                <% if message.user.image.attached?%>
-                  <%= link_to user_path(message.user) do%>
-                    <%= image_tag message.user.image ,class:"message-user-icon"%>
+          <% if user_signed_in? %>
+            <% if message.user.id == current_user.id%>
+              <div class="message-content-right">
+                <div class="message-icon">
+                  <% if message.user.image.attached?%>
+                    <%= link_to user_path(message.user) do%>
+                      <%= image_tag message.user.image ,class:"message-user-icon"%>
+                    <% end %>
+                  <% else %>
+                    <%= link_to user_path(message.user) do%>
+                      <%= image_tag ("dancer.png") ,class:"message-user-icon" %>
+                    <% end %>
                   <% end %>
-                <% else %>
+                </div>
+                <div class="message-name">
                   <%= link_to user_path(message.user) do%>
-                    <%= image_tag ("dancer.png") ,class:"message-user-icon" %>
+                    <p><%= message.user.nickname %></p>
                   <% end %>
-                <% end %>
+                </div>
+                <div class="created-at">
+                  <p><%= message.created_at %></p>
+                </div>
               </div>
-              <div class="message-name">
-                <%= link_to user_path(message.user) do%>
-                  <p><%= message.user.nickname %></p>
-                <% end %>
+              <div class="lower-message-right">
+                <div class="text">
+                  <p><%= message.text %></p>
+                </div>
               </div>
-              <div class="created-at">
-                <p><%= message.created_at %></p>
-              </div>
-            </div>
-            <div class="lower-message-right">
-              <div class="text">
-                <p><%= message.text %></p>
-              </div>
-            </div>
-          <% else %>
-            <div class="message-content-left">
-              <div class="message-icon">
-                <% if message.user.image.attached?%>
+            <% else %>
+              <div class="message-content-left">
+                <div class="message-icon">
+                  <% if message.user.image.attached?%>
+                    <%= link_to user_path(message.user) do%>
+                      <%= image_tag message.user.image ,class:"message-user-icon"%>
+                    <% end %>
+                  <% else %>
+                    <%= link_to user_path(message.user) do%>
+                      <%= image_tag ("dancer.png") ,class:"message-user-icon" %>
+                    <% end %>
+                  <% end %>
+                </div>
+                <div class="message-name">
                   <%= link_to user_path(message.user) do%>
-                    <%= image_tag message.user.image ,class:"message-user-icon"%>
+                    <p><%= message.user.nickname %></p>
                   <% end %>
-                <% else %>
-                  <%= link_to user_path(message.user) do%>
-                    <%= image_tag ("dancer.png") ,class:"message-user-icon" %>
-                  <% end %>
-                <% end %>
+                </div>
+                <div class="created-at">
+                  <p><%= message.created_at %></p>
+                </div>
               </div>
-              <div class="message-name">
-                <%= link_to user_path(message.user) do%>
-                  <p><%= message.user.nickname %></p>
-                <% end %>
+              <div class="lower-message-left">
+                <div class="text">
+                  <p><%= message.text %></p>
+                </div>
               </div>
-              <div class="created-at">
-                <p><%= message.created_at %></p>
-              </div>
-            </div>
-            <div class="lower-message-left">
-              <div class="text">
-                <p><%= message.text %></p>
-              </div>
-            </div>
+            <% end %>
           <% end %>
         <% end %>
       </div>
@@ -151,5 +153,7 @@
       <% end %>
     <% end %>
   </div>
-  <div class= "hidden" id= "currentUserId"><%= current_user.id%></div>
+  <% if user_signed_in? %>
+    <div class= "hidden" id= "currentUserId"><%= current_user.id%></div>
+  <% end %>
 </div>
