新規作成ページににurl情報表示

--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -28,6 +28,14 @@
             <%= f.text_area :price, placeholder:"（必須 )\n例) 100円/1h\n例) 3000円/人数", maxlength:"50"  %>
           </div>
         </div>
+        <div class="new-price">
+          <div class="new-price-text">
+            URL
+          </div>
+          <div class="new-price-form">
+            <%= f.text_area :url, maxlength:"200"  %>
+          </div>
+        </div>
         <div class="new-remark">
           <div class="new-remark-text">
             備考欄
