--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -9,7 +9,7 @@
             練習場所の名前
           </div>
           <div class="new-name-form">
-            <%= f.text_area :name, placeholder:"（必須 )", maxlength:"15" %>
+            <%= f.text_area :name, placeholder:"（必須 )\n施設の名前を入力してください", maxlength:"15" %>
           </div>
         </div>
         <div class="new-address">
@@ -17,7 +17,7 @@
             練習場所の住所
           </div>
           <div class="new-address-form">
-            <%= f.text_area :address, placeholder:"（必須 )", maxlength:"40" %>
+            <%= f.text_area :address, placeholder:"（必須 )\nGoogleMapで検索できる地名でないと登録できません", maxlength:"40" %>
           </div>
         </div>
         <div class="new-price">
@@ -25,7 +25,15 @@
             金額
           </div>
           <div class="new-price-form">
-            <%= f.text_area :price, placeholder:"例）300", maxlength:"50" %>
+            <%= f.text_area :price, placeholder:"（必須 )\n例) 100円/1h\n例) 3000円/人数", maxlength:"50" %>
+          </div>
+        </div>
+        <div class="new-price">
+          <div class="new-price-text">
+            URL
+          </div>
+          <div class="new-price-form">
+            <%= f.text_area :url, maxlength:"200" %>
           </div>
         </div>
         <div class="new-remark">
