--- a/app/assets/stylesheets/places/index.css.erb
+++ b/app/assets/stylesheets/places/index.css.erb
@@ -192,6 +192,47 @@ a {
   border: 1px solid #dedede;
   font-size: 10px;
   color:#FFF;
+  position:relative;
+}
+
+.detail-value-url {
+  background-color: #337079;
+  width: 80%;
+  height:15%;
+  padding: 5px;
+  border: 1px solid #dedede;
+  font-size: 10px;
+  color:#FFF;
+  position:relative;
+  text-align:center;
+}
+
+.detail-value-url > a {
+  width: 90%;
+  text-decoration: none;
+  color:#FFF;
+  position:absolute;
+  top:50%;
+  right:0;
+  -webkit-transform : translateY(-50%);
+  transform: translateY(-50%);
+  position: relative;
+  display: inline-block;
+  transition: .3s;
+}
+
+.detail-value-url > a::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: '';
+  width: 0;
+  height: 1px;
+  background-color: #2ecc71;
+  transition: .3s;
+}
+.detail-value-url > a:hover::after {
+  width: 100%;
 }
 
 .detail-item-remark {
