怪しいリンクにさせないためドメインを表示させる

--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -33,7 +33,7 @@
             URL
           </div>
           <div class="new-price-form">
-            <%= f.text_area :url, maxlength:"200" %>
+            <%= f.text_area :url, placeholder:"https://www.example.com", maxlength:"50" %>
           </div>
         </div>
         <div class="new-remark">
