--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -110,7 +110,7 @@
                     </tr>
                     <tr>
                       <th class="detail-item">url</th>
-                      <td class="detail-value"><% unless user_place.place.url == nil%><%= link_to "施設情報はこちら", user_place.place.url %><% end %></td>
+                      <td class="detail-value"><% unless user_place.place.url == nil%><%= link_to user_place.place.url, user_place.place.url %><% end %></td>
 
                     </tr>
                     <tr>
