--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,11 +1,7 @@
-<%
-=begin%>
- <%= render "shared/header" %>  
-<%
-=end%>
 <div class="wrapper">
   <div class= "side-bar">
     <div class= "side-header">
+    <%#ユーザーのログイン有無による条件分岐%>
       <% if user_signed_in? %>
         <div class="user-name">
           <%= link_to user_path(current_user) do  %>
@@ -43,6 +39,7 @@
           <%= link_to "ログインしてチャットに参加しよう", new_user_session_path %>
         </div>
       <% end %>
+    <%#ユーザーのログイン有無による条件分岐%>
     </div>
     <div class= "place-contents">
       <div class="place-content">
@@ -68,92 +65,43 @@
         <%= @place.name%>
       </div>
       <div class="exit">
-        <%#チャットに参加している場合のみ表示する%>
+      <%#チャットに参加している場合のみ表示する%>
         <% if @user_places.where(user_id: current_user, place_id: @place.id).exists? %>
-          <%#最初にこの練習場所を登録した人のみが編集と削除ができる%>
+        <%#最初にこの練習場所を登録した人かどうかで条件分岐%>
           <% if @user_places.where(place_id: @place.id).order(created_at: :asc).first == @user_places.where(user_id: current_user, place_id: @place.id).first %>
             <%= link_to "編集", edit_place_path(@place), method: :get %>
             <%= link_to "削除", place_path(@place), method: :delete  %>
           <% else %>
             <%= link_to "チャットから抜ける" , user_place_path(@place), method: :delete %>
           <% end %>
-          <%#最初にこの練習場所を登録した人のみが編集と削除ができる%>
+        <%#最初にこの練習場所を登録した人かどうかで条件分岐%>
         <% end %>
-        <%#チャットに参加している場合のみ表示する%>
+      <%#チャットに参加している場合のみ表示する%>
         <%= link_to "トップページへ" ,root_path %>
       </div>
     </div>
     <div class="main-main">
       <div id='messages' class="message-contents">
-        <% @messages.reverse_each do |message| %>
-          <% if user_signed_in? %>
-            <% if message.user.id == current_user.id%>
-              <div class="message-content-right">
-                <div class="message-icon">
-                  <% if message.user.image.attached?%>
-                    <%= link_to user_path(message.user) do%>
-                      <%= image_tag message.user.image ,class:"message-user-icon"%>
-                    <% end %>
-                  <% else %>
-                    <%= link_to user_path(message.user) do%>
-                      <%= image_tag ("dancer.png") ,class:"message-user-icon" %>
-                    <% end %>
-                  <% end %>
-                </div>
-                <div class="message-name">
-                  <%= link_to user_path(message.user) do%>
-                    <p><%= message.user.nickname %></p>
-                  <% end %>
-                </div>
-                <div class="created-at">
-                  <p><%= message.created_at %></p>
-                </div>
-              </div>
-              <div class="lower-message-right">
-                <div class="text">
-                  <p><%= message.text %></p>
-                </div>
-              </div>
-            <% else %>
-              <div class="message-content-left">
-                <div class="message-icon">
-                  <% if message.user.image.attached?%>
-                    <%= link_to user_path(message.user) do%>
-                      <%= image_tag message.user.image ,class:"message-user-icon"%>
-                    <% end %>
-                  <% else %>
-                    <%= link_to user_path(message.user) do%>
-                      <%= image_tag ("dancer.png") ,class:"message-user-icon" %>
-                    <% end %>
-                  <% end %>
-                </div>
-                <div class="message-name">
-                  <%= link_to user_path(message.user) do%>
-                    <p><%= message.user.nickname %></p>
-                  <% end %>
-                </div>
-                <div class="created-at">
-                  <p><%= message.created_at %></p>
-                </div>
-              </div>
-              <div class="lower-message-left">
-                <div class="text">
-                  <p><%= message.text %></p>
-                </div>
-              </div>
-            <% end %>
-          <% end %>
+        <% if user_signed_in? %>
+        <%#カレントユーザーの投稿は右側に表示させる%>
+          <%= render "signin_messages" %>
+        <% else %>
+        <%#全ユーザーの投稿は左側に表示させる%>
+          <%= render "signout_messages" %>
         <% end %>
       </div>
     </div>
     <% if @user_places.where(user_id: current_user, place_id: @place.id).exists? %>
+    <%#チャットに参加している場合のみ表示する%>
       <%= form_with model: [@place, @message], html: {class: "form"} do |f| %>
           <%= f.text_field :text, class: 'message', id: 'textField' %>
           <%= f.submit '送信', class: 'commit' %>
       <% end %>
+    <%#チャットに参加している場合のみ表示する%>
     <% end %>
   </div>
   <% if user_signed_in? %>
+  <%#非同期でユーザー画像を表示させるためユーザーidを取得しておく%>
     <div class= "hidden" id= "currentUserId"><%= current_user.id%></div>
   <% end %>
 </div>
