--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -2,100 +2,40 @@
   <div class="main">
     <div class="main-contents-left">
       <div class="place">練習場所一覧</div>
-      <div id="target"></div>
+      <div id="target"></div><%#地図を表示%>
       <form class= "search">
         <input type="text" id="address">
         <input type=submit id="search" onClick="return false;" value="Search">
       </form>
-      <% @places.each do |place|%>
-      <div class= "practicePlace hidden"><%= place.address%></div>
-      <div class= "practiceName hidden"></div>
-      <div class= "practiceChat hidden">
-        <%= link_to new_place_message_path(place.id) , method: :get do %>
-          <%= "#{place.name}のチャットページへ" %>
-        <% end %>
-      </div>
-      <% end %>
       <div class="direction">
-        <div class="sample btn" ><span class="sample">北海道</span><br class="br">方面</div>
-        <div class="sample btn" ><span class="sample">仙台</span><br class="br">方面</div>
-        <div class="sample btn" ><span class="sample">東京</span><br class="br">方面</div>
-        <div class="sample btn"><span >大阪</span><br class="br">方面</div>
-        <div class="sample btn"><span class="sample">九州</span><br class="br">方面</div>
+        <div class="sample btn" >北海道<br class="br">方面</div>
+        <div class="sample btn" >仙台<br class="br">方面</div>
+        <div class="sample btn" >東京<br class="br">方面</div>
+        <div class="sample btn" >大阪<br class="br">方面</div>
+        <div class="sample btn" >九州<br class="br">方面</div>
       </div>
     </div>
     <div class="main-contents-right">
       <div class="main-content-right-upper">
-        <div class="upper-explain-title">
-        まだ知らない練習場所を見つけよう
-        </div>
-        <div class="explain-content">
-        マーカーをクリックして詳細情報を確認できます
-        </div>
-        <div class="explain-content">
-        お気に入りの練習場所を見つけよう
-        </div>
-        <div class="explain-content">
-        チャットで新たな仲間と交流しよう
-        </div>
+        <div class="upper-explain-title">まだ知らない練習場所を見つけよう</div>
+        <div class="explain-content">マーカーをクリックして詳細情報を確認できます</div>
+        <div class="explain-content">お気に入りの練習場所を見つけよう</div>
+        <div class="explain-content">チャットで新たな仲間と交流しよう</div>
       </div>
-      <%#マーカークリックした場所の情報#%>
       <div class="main-content-right-middle ">
-        <% @places.each do |place|%>
-          <div class="hidden place-show" id="placeShow">
-            <div class="mypage-place-show-left">
-              <% if place.image.attached?%>
-                <div class="mypage-item-box">
-                  <%= image_tag place.image ,class:"item-box-img" %>
-                </div>
-              <% else %>
-                <div class="mypage-item-box">
-                  <%= image_tag ("default_place.png") ,class:"item-box-img" %>
-                </div>
-              <% end %>
-                <div class="mypage-place-content-list">
-                  <p>チャット<br class="br">参加人数：</p>
-                  <p class= "place-info"><%= "#{@user_places.where(place_id: place.id).count}人"%></p>
-                </div>
-                <%= link_to "チャットページへ", new_place_message_path(place) ,class:"mypage-new-place" %>
-            </div>
-            <div class="place-show-right">
-              <table class="detail-table">
-                <tbody>
-                  <tr>
-                    <th class="detail-item">場所名</th>
-                    <td class="detail-value"><%= place.name %></td>
-                  </tr>
-                  <tr>
-                    <th class="detail-item">住所</th>
-                    <td class="detail-value"><%= place.address %></td>
-                  </tr>
-                  <tr>
-                    <th class="detail-item">金額</th>
-                    <td class="detail-value"><%= place.price %></td>
-                  </tr>
-                  <tr>
-                    <th class="detail-item">url</th>
-                    <td class="detail-value-url"><% unless place.url == nil%><%= link_to place.url, place.url %><% end %></td>
-                  </tr>
-                  <tr>
-                    <th class="detail-item-remark">備考</th>
-                    <td class="detail-value-remark"><%= place.remark %></td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        <% end %>
+        <%= render "detail_places" %><%#マーカーをクリックすると練習場所の詳細情報を表示させる%>
       </div>
-      <%#マーカークリックした場所の情報#%>
-
       <div class="main-content-right-lower">
-        <div class="lower-explain-title">
-        新しい練習場所を共有しよう
-        </div>
+        <div class="lower-explain-title">新しい練習場所を共有しよう</div>
           <%= link_to "新規練習場所を作成する", new_place_path, method: :get, class:"new-place"%>
       </div>
     </div>
   </div>
 <%= render "shared/footer" %> 
+<% @places.each do |place|%><%#各練習場所の情報を取得できるようにする%>
+  <div class= "practicePlace hidden"><%= place.address%></div>
+  <div class= "practiceName hidden"></div>
+  <div class= "practiceChat hidden">
+    <%= link_to "#{place.name}のチャットページへ" , new_place_message_path(place.id) , method: :get %>
+  </div>
+<% end %>
