--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -1,48 +1,6 @@
 <%= render "shared/header" %>
 <div class="mypage-wrapper">
-  <div class= "mypage-left-contents">
-    <div class= "user-image">
-      <% if @user.image.attached?%>
-        <%= image_tag @user.image,class:"user-icon" %>
-      <% else %>
-          <%= image_tag ("dancer.png") ,class:"user-icon" %>
-      <% end %>
-    </div>
-    <div class= "user-profile">
-      <div class= "user-nickname">
-        <%= link_to @user.nickname, user_path(id: @user.id), method: :get%>
-      </div>
-      <% if current_user.id == @user.id  %>
-        <div class= "user-crew">
-          <%= link_to "メッセージを確認する"%>
-        </div>
-        <div class= "user-edit">
-          <%= link_to "プロフィールを編集する", edit_user_path(id: current_user.id), method: :get%>
-        </div>
-      <% else %>
-        <div class= "user-crew">
-          <%= link_to "ダイレクトメッセージ"%>
-        </div>
-      <% end %>
-      <div class= "user-relationship">
-        <% if current_user != @user %>
-          <% if @user.followed_by?(current_user) %>
-              <%=link_to "フォロー済み   ", user_relationships_path(@user.id), method: :delete %>
-          <% else %>
-              <%=link_to "フォローする", user_relationships_path(@user.id), method: :post %>
-          <% end %>
-        <% end %>
-      </div>
-      <div class= "user-about">
-        <%=link_to followers_user_path(@user.id), method: :get do%>
-          <%= "#{@follower}" %>フォロー中
-        <% end %>
-        <%=link_to follows_user_path(@user.id), method: :get do%>
-          <%= "#{@follow}" %>フォロワー
-        <% end %>
-      </div>
-    </div>
-  </div>
+  <%= render "mypage_side_bar" %>
   <div class = "mypage-right-contents">
     <div class="user-places">
       <div class="user-places-title">
