--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,59 +1,14 @@
 <%= render "shared/header" %>
 <div class="mypage-wrapper">
-  <div class= "mypage-left-contents">
-    <div class= "user-image">
-      <% if @user.image.attached?%>
-        <%= image_tag @user.image,class:"user-icon" %>
-      <% else %>
-          <%= image_tag ("dancer.png") ,class:"user-icon" %>
-      <% end %>
-    </div>
-    <div class= "user-profile">
-      <div class= "user-nickname">
-        <%= link_to @user.nickname, user_path(id: @user.id), method: :get%>
-      </div>
-      <div class= "user-remark">
-        <%= @user.remark %>
-      </div>
-      <% if current_user.id == @user.id  %>
-        <div class= "user-crew">
-          <%= link_to "メッセージを確認する"%>
-        </div>
-        <div class= "user-edit">
-          <%= link_to "プロフィールを編集する", edit_user_path(id: current_user.id), method: :get%>
-        </div>
-      <% else %>
-        <div class= "user-crew">
-          <%= link_to "ダイレクトメッセージ"%>
-        </div>
-      <% end %>
-      <% if current_user != @user %>
-        <div class= "user-relationship">
-          <% if @user.followed_by?(current_user) %>
-            <%=link_to "フォロー済み   ", user_relationships_path(@user.id), method: :delete %>
-          <% else %>
-            <%=link_to "フォローする", user_relationships_path(@user.id), method: :post %>
-          <% end %>
-        </div>
-      <% end %>
-      <div class= "user-about">
-        <%=link_to followers_user_path(@user.id), method: :get do%>
-          <%= "#{@follower}" %>フォロー中
-        <% end %>
-        <%=link_to follows_user_path(@user.id), method: :get do%>
-          <%= "#{@follow}" %>フォロワー
-        <% end %>
-      </div>
-    </div>
-  </div>
+  <%= render "mypage_side_bar" %><%#ユーザーのプロフィール欄%>
   <div class = "mypage-right-contents">
     <div class="user-places">
       <div class="user-places-title">
         良く使う練習場所
       </div>
       <div class="user-place">
-        <% if @user_places.where(user_id: @user.id).count == 0 %>
-          <% if current_user == @user %>
+        <% if @user_places.where(user_id: @user.id).count == 0 %><%#ユーザーがどの練習場所のチャットにも参加していない場合%>
+          <% if current_user == @user %><%#カレントユーザーページの場合%>
             <div class="mypage-main-content-right-lower">
               <div class="lower-explain-title">
               自分だけの新しい練習場所を共有しよう
@@ -66,7 +21,7 @@
               </div>
                 <%= link_to "トップページへ", root_path, method: :get, class:"new-place"%>
             </div>
-          <% else%>
+          <% else%><%#他のユーザーページの場合%>
             <div class="mypage-main-content-right-lower">
               <div class="mypage-lower-explain-title">
                 このユーザーが良く使う練習場所はまだありません
@@ -74,8 +29,8 @@
             </div>
           <% end %>
         <% end %>
-        <% @user_places.each do |user_place|%>
-          <% if user_place.user_id == @user.id%>
+        <% @user_places.each do |user_place|%><%#全ての練習場所の情報を取得%>
+          <% if user_place.user_id == @user.id%><%#そのページのユーザーが参加している練習場所のチャットのみ表示させる%>
             <div class="mypage-place-show" id="placeShow">
               <div class="mypage-place-show-left">
                 <% if user_place.place.image.attached?%>
@@ -111,7 +66,6 @@
                     <tr>
                       <th class="detail-item">url</th>
                       <td class="detail-value"><% unless user_place.place.url == nil%><%= link_to user_place.place.url, user_place.place.url %><% end %></td>
-
                     </tr>
                     <tr>
                       <th class="detail-item-remark">備考</th>
