マイページの練習場所のurlリンク修正

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -65,7 +65,7 @@
                     </tr>
                     <tr>
                       <th class="detail-item">url</th>
-                      <td class="detail-value"><% unless user_place.place.url == nil%><%= link_to user_place.place.url, user_place.place.url %><% end %></td>
+                      <td class="detail-value-url"><% unless user_place.place.url == nil%><%= link_to user_place.place.url, user_place.place.url %><% end %></td>
                     </tr>
                     <tr>
                       <th class="detail-item-remark">備考</th>
