ページごとのユーザー画像サイズを統一する

--- a/app/assets/stylesheets/users/show.css.erb
+++ b/app/assets/stylesheets/users/show.css.erb
@@ -15,13 +15,14 @@
 
 }
 .user-image {
-  height:30%;
-  width:100%;
+  height:180px;
+  width:180px;
+  margin:0 auto;
 }
 
 .user-icon {
   height: 100%;
-  width: 70%;
+  width: 100%;
   border-radius:50%;
   border:1px solid #dedede;
   margin: 0 auto;
