--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -70,6 +70,9 @@ img,
 picture {
   max-width: 100%;
   display: block;
+  width:50px;
+  height:50px;
+  object-fit: cover;
 }
 
 /* Natural flow and rhythm in articles by default */
