--- a/app/assets/stylesheets/places/index.css.erb
+++ b/app/assets/stylesheets/places/index.css.erb
@@ -159,9 +159,12 @@ a {
   background-color: rgba(0, 0, 0,0);
 }
 .item-box-img {
-  height: 100%;
-  width: 100%;
-  object-fit: contain;
+  height: 50px;
+  width: 50px;
+  object-fit: cover;
+  border-radius:50%;
+  border:1px solid #dedede;
+  margin: 0 auto;
 }
 .place-show-right{
   width:60%;
