--- a/app/assets/stylesheets/users/show.css.erb
+++ b/app/assets/stylesheets/users/show.css.erb
@@ -15,17 +15,24 @@
 
 }
 .user-image {
+  background-image: url("<%= asset_path('frame.png') %>");
+  background-size: cover;
+  background-position: center;
   height:180px;
   width:180px;
   margin:0 auto;
+  position:relative;
 }
 
 .user-icon {
-  height: 100%;
-  width: 100%;
+  height: 90%;
+  width: 90%;
   border-radius:50%;
   border:1px solid #dedede;
   margin: 0 auto;
+  position:absolute;
+  top: 5%;
+  left: 5% ;
 }
 
 .user-profile {
