練習場所の画像が円形にならないように修正

--- a/app/assets/stylesheets/places/index.css.erb
+++ b/app/assets/stylesheets/places/index.css.erb
@@ -159,12 +159,9 @@ a {
   background-color: rgba(0, 0, 0,0);
 }
 .item-box-img {
-  height: 50px;
-  width: 50px;
-  object-fit: cover;
-  border-radius:50%;
-  border:1px solid #dedede;
-  margin: 0 auto;
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
 }
 .place-show-right{
   width:60%;
