--- a/app/assets/stylesheets/messages/new.css
+++ b/app/assets/stylesheets/messages/new.css
@@ -232,7 +232,8 @@
 .message-user-icon {
   /*object-fit: contain;*/
   border-radius:50%;
-  border:1px solid #dedede;
+  background-color: rgba(0,0,0,0.1);
+
 }
 
 .lower-message-right {
