--- a/app/assets/stylesheets/users/show.css.erb
+++ b/app/assets/stylesheets/users/show.css.erb
@@ -28,11 +28,11 @@
   height: 90%;
   width: 90%;
   border-radius:50%;
-  border:1px solid #dedede;
   margin: 0 auto;
   position:absolute;
   top: 5%;
   left: 5% ;
+  background-color: rgba(0,0,0,0.3);
 }
 
 .user-profile {
@@ -174,6 +174,16 @@
   height: 50%;
   width: 90%;
   background-color: rgba(0, 0, 0,0);
+}
+
+.follow-img {
+  height: 50px;
+  width: 50px;
+  object-fit: cover;
+  border-radius:50%;
+  margin: 0 auto;
+  background-color: rgba(0,0,0,0.3);
+
 }
 
 .mypage-place-show-left{
