サインアップページにダンスレベルの設定欄を追加

--- a/app/assets/stylesheets/users/user.css
+++ b/app/assets/stylesheets/users/user.css
@@ -68,6 +68,10 @@
   width: 100%;
   display:block;
 }
+.dance-level-select{
+  height: 30px;
+  width: 100%;
+}
 .account-page .field .field-submit .btn {
   width: 100%;
   letter-spacing: 10px;
