--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -42,6 +42,14 @@
           </div>
         </div>
         <div class='field'>
+          <div class='field-label'>
+            <%= f.label :dance_level_id%>
+          </div>
+          <div class='field-input'>
+            <%= f.collection_select(:dance_level_id, DanceLevel.all, :id, :name, {}, {class:"dance-level-select"}) %>
+        </div>
+        </div>
+        <div class='field'>
           <div class='field-submit'>
             <div class='actions'>
               <%= f.submit "Create Account", class: 'btn'%>
