マイページでダンスレベルに応じてユーザーアイコンのフレーム変更

--- a/app/assets/stylesheets/users/show.css.erb
+++ b/app/assets/stylesheets/users/show.css.erb
@@ -15,7 +15,49 @@
 
 }
 .user-image {
-  background-image: url("<%= asset_path('frame.png') %>");
+  height:180px;
+  width:180px;
+  margin:0 auto;
+  position:relative;
+}
+.user-image2 {
+  background-image: url("<%= asset_path('frame2.png') %>");
+  background-size: cover;
+  background-position: center;
+  height:180px;
+  width:180px;
+  margin:0 auto;
+  position:relative;
+}
+.user-image3 {
+  background-image: url("<%= asset_path('frame3.png') %>");
+  background-size: cover;
+  background-position: center;
+  height:180px;
+  width:180px;
+  margin:0 auto;
+  position:relative;
+}
+.user-image4 {
+  background-image: url("<%= asset_path('frame4.png') %>");
+  background-size: cover;
+  background-position: center;
+  height:180px;
+  width:180px;
+  margin:0 auto;
+  position:relative;
+}
+.user-image5 {
+  background-image: url("<%= asset_path('frame5.png') %>");
+  background-size: cover;
+  background-position: center;
+  height:180px;
+  width:180px;
+  margin:0 auto;
+  position:relative;
+}
+.user-image6 {
+  background-image: url("<%= asset_path('frame6.png') %>");
   background-size: cover;
   background-position: center;
   height:180px;
@@ -46,8 +88,12 @@
   font-weight:bold;
   padding:5px 0;
 }
-.user-relationship, .user-crew, .user-about, .user-nickname, .user-edit {
+.user-relationship, .user-crew, .user-about, .user-nickname, .user-edit, .user-dance-level {
   height:15%;
+}
+
+.user-dance-level{
+  font-size: 10px;
 }
 
 .user-remark {
