--- a/app/assets/stylesheets/places/index.css.erb
+++ b/app/assets/stylesheets/places/index.css.erb
@@ -153,7 +153,7 @@ a {
   padding:20px 0;
 }
 
-.mypage-item-box {
+.toppage-item-box {
   height: 50%;
   width: 80%;
   background-color: rgba(0, 0, 0,0);
