--- a/app/assets/stylesheets/users/show.css.erb
+++ b/app/assets/stylesheets/users/show.css.erb
@@ -215,20 +215,81 @@
   border:1px solid #dedede;
   background-color:rgba(0,0,0,0.3);
 }
-
 .mypage-item-box {
   height: 50%;
   width: 90%;
+}
+.follow-item-box {
+  height: 60px;
+  width: 60px;
   background-color: rgba(0, 0, 0,0);
+  background-image: url("<%= asset_path('frame2.png') %>");
+  background-size: cover;
+  background-position: center;
+  margin:0 auto;
+  position:relative;
+}
+.follow-item-box2 {
+  height: 60px;
+  width: 60px;
+  background-color: rgba(0, 0, 0,0);
+  background-image: url("<%= asset_path('frame2.png') %>");
+  background-size: cover;
+  background-position: center;
+  margin:0 auto;
+  position:relative;
+}
+.follow-item-box3 {
+  height: 60px;
+  width: 60px;
+  background-color: rgba(0, 0, 0,0);
+  background-image: url("<%= asset_path('frame3.png') %>");
+  background-size: cover;
+  background-position: center;
+  margin:0 auto;
+  position:relative;
+}
+.follow-item-box4 {
+  height: 60px;
+  width: 60px;
+  background-color: rgba(0, 0, 0,0);
+  background-image: url("<%= asset_path('frame4.png') %>");
+  background-size: cover;
+  background-position: center;
+  margin:0 auto;
+  position:relative;
+}
+.follow-item-box5 {
+  height: 60px;
+  width: 60px;
+  background-color: rgba(0, 0, 0,0);
+  background-image: url("<%= asset_path('frame5.png') %>");
+  background-size: cover;
+  background-position: center;
+  margin:0 auto;
+  position:relative;
+}
+.follow-item-box6 {
+  height: 60px;
+  width: 60px;
+  background-color: rgba(0, 0, 0,0);
+  background-image: url("<%= asset_path('frame6.png') %>");
+  background-size: cover;
+  background-position: center;
+  margin:0 auto;
+  position:relative;
 }
 
 .follow-img {
-  height: 50px;
-  width: 50px;
+  height: 80%;
+  width: 80%;
   object-fit: cover;
   border-radius:50%;
   margin: 0 auto;
   background-color: rgba(0,0,0,0.3);
+  position:absolute;
+  top: 10%;
+  left: 10% ;
 
 }
 
