--- a/app/assets/stylesheets/users/user.css
+++ b/app/assets/stylesheets/users/user.css
@@ -121,11 +121,13 @@
   padding: 20px 30px;
   border: 1px solid #ddd;
   border-radius: 2px;
+  font-size: 13px;
 }
 #error_explanation h2 {
   margin-bottom: 10px;
   color: #d65f4c;
   font-size: 14px;
+  display:none;
 }
 #error_explanation ul {
   margin: 0;
