--- a/app/views/users/_error_messages.html.erb
+++ b/app/views/users/_error_messages.html.erb
@@ -1,8 +1,8 @@
 <% if user.errors.any? %>
- <div class="error-alert-user">
+ <div id="error_explanation">
    <ul>
      <% user.errors.full_messages.each do |message| %>
-       <li class="error-message-user">
+       <li>
          <%= message %>
        </li>
      <% end %>
