--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -47,7 +47,7 @@
             ユーザーアイコン画像
           </div>
           <div class="edit-image-form">
-            <%= f.file_field :image, class: 'image' %>
+            <%= f.file_field :image, accept: '.jpeg, .jpg, .gif, .png, .bmp', class: 'image' %>
           </div>
         </div>
         <div class='field'>
