--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -49,14 +49,25 @@
             写真(練習風景など)
           </div>
           <div class="new-image-form">
-            <%= f.file_field :image, accept: '.jpeg, .jpg, .gif, .png, .bmp', class: 'image' %>
+            <%= f.file_field :image, class: 'image' %>
           </div>
         </div>
         <input name="place[user_ids][]" type="hidden" value=<%=current_user.id%>>
+        <input name="place[lats][]" type= "hidden" id="lat" >
+        <input name="place[lngs][]" type= "hidden" id="lng" >
         <%= f.submit "新しい練習場所を登録する！" %>
         <%=link_to 'もどる', root_path%>
       </div>
     <% end %>
+  </div>
+  <div class="map-contents">
+    <div class="content">
+      <div id="newTarget"></div><%#地図を表示%>
+      <form class= "search">
+        <input type="text" id="address">
+        <input type=submit id="search" onClick="return false;" value="Search">
+      </form>
+    </div>
   </div>
 </div>
 <%= render "shared/footer" %> 
