--- a/app/assets/stylesheets/places/new.css.erb
+++ b/app/assets/stylesheets/places/new.css.erb
@@ -4,12 +4,12 @@
   background-position: center;
   height:100%;
   width:100%;
+  display:flex;
 }
 
 .contents {
-  width:800px;
+  width:700px;
   height:100%;
-  margin: 0 auto;
 }
 
 .content {
@@ -22,7 +22,7 @@
   height:100%;
   color:white;
   font-weight:bold;
-  background-color:rgba(0,0,0,0.3);
+  /*background-color:rgba(0,0,0,0.3)*/
 }
 
 .new-name {
@@ -195,6 +195,16 @@
   color: #000;
   background-color:#79CF9F;
   border-bottom: 2px solid #3BB26F;
+}
+
+.map-contents {
+  width:calc(100% - 700px);
+  height:100%;
+}
+
+#newTarget {
+  width: 90%;
+  height: 400px;
 }
 
 @media (max-width: 599px) {
