--- a/app/views/users/_mypage_side_bar.html.erb
+++ b/app/views/users/_mypage_side_bar.html.erb
@@ -34,34 +34,36 @@
     <div class= "user-remark">
       <%= @user.remark %>
     </div>
-    <% if current_user.id == @user.id  %>
-      <div class= "user-crew">
-        <%= link_to "メッセージを確認する"%>
-      </div>
-      <div class= "user-edit">
-        <%= link_to "プロフィールを編集する", edit_user_path(id: current_user.id), method: :get%>
-      </div>
-    <% else %>
-      <div class= "user-crew">
-        <%= link_to "ダイレクトメッセージ"%>
-      </div>
-    <% end %>
-    <% if current_user != @user %>
-      <div class= "user-relationship">
-        <% if @user.followed_by?(current_user) %>
-          <%=link_to "フォロー済み   ", user_relationships_path(@user.id), method: :delete, data: {confirm: "フォローを解除してもよろしいですか？"} %>
-        <% else %>
-          <%=link_to "フォローする", user_relationships_path(@user.id), method: :post %>
+    <% if user_signed_in? %>
+      <% if current_user.id == @user.id  %>
+        <div class= "user-crew">
+          <%= link_to "メッセージを確認する"%>
+        </div>
+        <div class= "user-edit">
+          <%= link_to "プロフィールを編集する", edit_user_path(id: current_user.id), method: :get%>
+        </div>
+      <% else %>
+        <div class= "user-crew">
+          <%= link_to "ダイレクトメッセージ"%>
+        </div>
+      <% end %>
+      <% if current_user != @user %>
+        <div class= "user-relationship">
+          <% if @user.followed_by?(current_user) %>
+            <%=link_to "フォロー済み   ", user_relationships_path(@user.id), method: :delete, data: {confirm: "フォローを解除してもよろしいですか？"} %>
+          <% else %>
+            <%=link_to "フォローする", user_relationships_path(@user.id), method: :post %>
+          <% end %>
+        </div>
+      <% end %>
+      <div class= "user-about">
+        <%=link_to followers_user_path(@user.id), method: :get do%>
+          <%= "#{@follower}" %>フォロー中
+        <% end %>
+        <%=link_to follows_user_path(@user.id), method: :get do%>
+          <%= "#{@follow}" %>フォロワー
         <% end %>
       </div>
     <% end %>
-    <div class= "user-about">
-      <%=link_to followers_user_path(@user.id), method: :get do%>
-        <%= "#{@follower}" %>フォロー中
-      <% end %>
-      <%=link_to follows_user_path(@user.id), method: :get do%>
-        <%= "#{@follow}" %>フォロワー
-      <% end %>
-    </div>
   </div>
 </div>
