ユーザーの編集ページでテストコードで識別できるようにリファクタリング

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -44,7 +44,7 @@
         </div>
         <div class="field">
           <div class="field-label">
-            ユーザーアイコン画像
+            <%= f.label :image%>
           </div>
           <div class="edit-image-form">
             <%= f.file_field :image, accept: '.jpeg, .jpg, .gif, .png, .bmp', class: 'image' %>
