ユーザーの自己紹介が空の場合の文を追加

--- a/app/views/users/_mypage_side_bar.html.erb
+++ b/app/views/users/_mypage_side_bar.html.erb
@@ -32,7 +32,11 @@
       <%= @user.dance_level.name %>
     </div>
     <div class= "user-remark">
-      <%= @user.remark %>
+      <% if @user.remark.blank? %>
+        自己紹介は記入していません
+      <% else %>
+        <%= @user.remark %>
+      <% end %>
     </div>
     <% if user_signed_in? %>
       <% if current_user.id == @user.id  %>
