タブレット、スマホの時に改行を追加

--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -2,7 +2,7 @@
 <div class="new-contents">
   <div class="map-contents">
     <div class="content">
-    <div class="place">マップにマーカーを立てて新しい練習場所を登録する</div>
+    <div class="place">マップにマーカーを立てて<br class="br">新しい練習場所を登録する</div>
       <div id="newTarget"></div><%#地図を表示%>
       <form class= "search">
         <input type="text" id="address">
