--- a/app/assets/stylesheets/places/new.css.erb
+++ b/app/assets/stylesheets/places/new.css.erb
@@ -34,7 +34,7 @@
 }
 
 .new-name-text {
-  font-size:20px;
+  font-size:15px;
   width:30%;
   line-height:80px;
   text-align:left;
@@ -65,7 +65,7 @@
 }
 
 .new-address-text {
-  font-size:20px;
+  font-size:15px;
   width:30%;
   line-height:80px;
   text-align:left;
@@ -94,7 +94,7 @@
 }
 
 .new-remark-text {
-  font-size:20px;
+  font-size:15px;
   width:30%;
   line-height:80px;
   text-align:left;
@@ -119,7 +119,7 @@
 }
 
 .new-price-text {
-  font-size:20px;
+  font-size:15px;
   width:30%;
   line-height:80px;
   text-align:left;
@@ -153,7 +153,7 @@
 }
 
 .new-image-text {
-  font-size:20px;
+  font-size:15px;
   width:50%;
   line-height:80px;
   text-align:left;
@@ -207,7 +207,50 @@
   height: 500px;
 }
 
+@media (max-width: 1024px) {
+  .new-contents {
+    display: block;
+  }
+  .br {
+    display: inline;
+  }
+  .map-contents {
+    width: 100%;
+  }
+  .contents {
+    width: 100%;
+  }
+  .new-name {
+    width: 100%;
+    justify-content: space-around;
+  }
+  .new-address {
+    width: 100%;
+    justify-content: space-around;
+  }
+  .new-price {
+    width: 100%;
+    justify-content: space-around;
+  }
+  .new-remark {
+    width: 100%;
+    justify-content: space-around;
+  }
+  .new-image {
+    width: 100%;
+    justify-content: space-around;
+  }
+  .new-image-text {
+    width: 30%;
+  }
+  .new-image-form {
+    margin: 0;
+  }
+}
 @media (max-width: 599px) {
+.map-contents {
+    height: 600px;
+}
   .contents {
     width:100%;
   }
