インデント,}のつけ忘れ修正

--- a/app/assets/stylesheets/places/new.css.erb
+++ b/app/assets/stylesheets/places/new.css.erb
@@ -22,7 +22,7 @@
   height:100%;
   color:white;
   font-weight:bold;
-  /*background-color:rgba(0,0,0,0.3)*/
+  /*background-color:rgba(0,0,0,0.3);*/
 }
 
 .new-name {
@@ -248,9 +248,9 @@
   }
 }
 @media (max-width: 599px) {
-.map-contents {
+  .map-contents {
     height: 600px;
-}
+  }
   .contents {
     width:100%;
   }
